css/styles.css
#map {
  height: 100%;
}

#suggestion-name {
  font-size: 40px;
}

#suggestion {
  text-align: left;
  margin: 1rem;
  position: absolute;
  color: white;
  background-color: #555555;
  border-radius: 0.25rem;
  top: 0;
  visibility: hidden;
}

.transition {
  -webkit-transition: all 0.4s;
  -moz-transition: all 0.4s;
  -o-transition: all 0.4s;
  transition: all 0.4s;
}

.suggestion-head {
  padding: 0.25rem 0.5rem;
}

.suggestion-body {
  background-color: #5f5f5f;
  border-radius: 0.25rem;
  padding: 0.25rem 0.5rem;
}

.suggestion-body span {
  margin-top: 1rem;
}

.skip-place {
  z-index: 1;
  text-align: right;
  padding: 2rem;
  position: absolute;
  bottom: 0;
  right: 0;
}

.move-up {
  transform: translateY(-200%);
}

.move-right {
  transform: translateX(200%);
}

button {
  font-family: 'Roboto', sans-serif;
  background-color: #555555;
  border-radius: 0.25rem;
  border: none;
  color: white;
  padding: 15px 32px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 16px;
  opacity: 0.9;
  cursor: pointer;
  visibility: hidden;
}

button:hover {
  opacity: 1;
}

html, body {
  height: 100%;
  font-family: 'Roboto', sans-serif;
  margin: 0;
  padding: 0;
}

